add latest file structure

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Infinity</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Serif&display=swap" rel="stylesheet"> 
 </head>
 <body>
-
+  <div class="wrapper">
+    <p class="quote">"A világon két dolog végtelen: a világegyetem és az emberi hülyeség. Bár az elsőben nem vagyok biztos."</p>
+    <p class="author"><small>-Albert Einstein</small></p>
+  </div>
 </body>
 </html>
