add latest file structure

--- a/index-eng.html
+++ b/index-eng.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <div class="wrapper">
-    <p class="quote">"A világon két dolog végtelen: a világegyetem és az emberi hülyeség. Bár az elsőben nem vagyok biztos."</p>
+    <p class="quote">"Two things are infinite, the universe and human stupidity, and I am not yet completely sure about the universe."</p>
     <p class="author"><small>-Albert Einstein</small></p>
   </div>
   <nav>
-    <a href="index-eng.html">En</a>
+    <a href="index.html">Hu</a>
   </nav>
 </body>
 </html>
